# lkmetrology_sensor_constructor

./: CMakeLists.txt  README.md  catalogue.h  cataloguemanager.cpp  cataloguemanager.h  cataloguetabswidget.cpp  cataloguetabswidget.h  component.h  constants.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  sensorgraphicsitem.cpp  sensorgraphicsitem.h  sensormodel.cpp  sensormodel.h  sensorview.cpp  sensorview.h  sidepanelwidget.cpp  sidepanelwidget.h  topbarwidget.cpp  topbarwidget.h
controllers/: sensorcontroller.cpp  sensorcontroller.h
models/: catalogue.h  component.h
ui/: detailspanelwidget.cpp  detailspanelwidget.h  mainwindow.cpp  mainwindow.h  sensorgraphicsitem.cpp  sensorgraphicsitem.h  sensortabswidget.cpp  sensortabswidget.h  sensorviewwidget.cpp  sensorviewwidget.h  topbarwidget.cpp  topbarwidget.h
